--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-server.port=8080
+server.port=8081
 management.endpoints.web.exposure.include=health,info
 catFacts.base.url=https://catfact.ninja
+github.base.url=https://api.github.com
