--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8081
 management.endpoints.web.exposure.include=health,info
 catFacts.base.url=https://catfact.ninja
 github.base.url=https://api.github.com
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=200,expireAfterWrite=10m
